@@ -43,6 +43,7 @@ fixed bugs:
 - afternode heuristics are now called even if the node limit was reached and the solving process will be stopped
   after the current node
 - fixed bug when activating probing mode with a non-empty separation storage
+- fixed potentially wrong cleanup of fixed variables in nonlinear constraint handler
 
 performance improvements:
 - widened a bottleneck in simplifying long signomial sums in a nonlinear constraint
